# Radsim

./: .env.example  .gitignore  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  NOTICE  RADSIM_DOCUMENTATION.md  RADSIM_QUICK_START.md  RADSIM_SYSTEM_PROMPT.txt  README.md  ROADMAP_PLAN_PANNING_UPDATE.md  UIPLAN.md  generate_docs_pdf.py  install.ps1  install.py  install.sh  pyproject.toml  radsim-audit-report.md  radsim.md  radsim.sh  requirements.txt  test_memory_system.py  uninstall.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml
docs/: telegram_bot_fix_plan.md
docs/screenshots/: terminal_mockup.html
radsim/: __init__.py  __main__.py  access_control.py  adversarial.py  agent.py  agent_api.py  agent_config.py  agent_constants.py  agent_conversation.py  agent_policy.py  agent_runtime.py  agent_subagents.py  agent_subtasks.py  agent_telegram.py  api_client.py  archaeology.py  background.py  browser.py  cli.py  code_quality.py  command_completer.py  commands.py  commands_core.py  commands_help.py  commands_learning.py  commands_metadata.py  commands_workflow.py  complexity.py  config.py  diff_display.py  escape_listener.py  file_tools.py  git_tools.py  health.py  hooks.py  jobs.py  keybindings.py  log_config.py  login.py  mascot_spinner.py  (+34 more)
radsim/experimental/: __init__.py  model_router.py  vector_memory.py
radsim/learning/: __init__.py  active_learner.py  analytics.py  error_analyzer.py  few_shot_assembler.py  preference_learner.py  reflection_engine.py  self_improver.py  tool_optimizer.py
radsim/prompt_fragments/: personality.md  tool_use.md
radsim/skills/: README.md  browser_automation.md  directory_operations.md  file_operations.md  git_operations.md  production_readiness.md  search.md  shell_commands.md  web_tools.md
radsim/tools/: __init__.py  advanced.py  code_intel.py  command_policy.py  constants.py  custom_tools.py  definitions.py  dependencies.py  directory_ops.py  file_ops.py  git.py  project.py  search.py  self_extend.py  shell.py  testing.py  validation.py  web.py
snippets/: Mascot.jsx  README.md  Splash.jsx  animated-logo-splash.css  mascot-cursor.css
tests/: conftest.py  test_access_control.py  test_adversarial.py  test_agent_safety.py  test_api_retry.py  test_archaeology.py  test_background.py  test_command_completer.py  test_commands.py  test_complexity.py  test_config.py  test_diff_display.py  test_file_tools.py  test_health.py  test_hooks.py  test_lazy_loading.py  test_learning_modules.py  test_log_config.py  test_login.py  test_main_entry.py  test_mascot_spinner.py  test_memory_and_stream.py  test_menu.py  test_model_router.py  test_modes.py  test_multi_edit.py  test_openrouter_models.py  test_panning.py  test_patch.py  test_planner.py  test_prompt_review_improvements.py  test_rate_limiter.py  test_reasoning_effort.py  test_repo_map.py  test_response_validator.py  test_runtime_reload.py  test_safety.py  test_scheduler.py  test_security_injection.py  test_security_traversal.py  (+18 more)
