[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "radsimcli"
version = "1.2.1"
description = "RadSim - Radically Simple Code Generator"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Matthew Bright" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "anthropic>=0.40.0,<1.0",
    "rich>=13.0.0",
    "openai>=1.50.0,<2.0",
    "google-genai>=0.8.0,<2.0",
    "playwright>=1.40.0,<2.0",
    "tree-sitter>=0.21.0,<1.0",
    "tree-sitter-python>=0.21.0",
    "tree-sitter-javascript>=0.21.0",
    "tree-sitter-typescript>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
radsim = "radsim.cli:main"

[project.urls]
Homepage = "https://github.com/MBemera/Radsim"
Documentation = "https://github.com/MBemera/Radsim#readme"
PyPI = "https://pypi.org/project/radsimcli/"

[tool.hatch.build.targets.wheel]
packages = ["radsim"]

[tool.hatch.build.targets.sdist]
include = ["radsim/", "LICENSE", "README.md"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "N806",   # Variable in function should be lowercase (intentional CONSTANT pattern)
    "N818",   # Exception name should end with Error (intentional naming for control flow)
]

[tool.ruff.lint.isort]
known-first-party = ["radsim"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
